--- a/The_Erder_Dedicated_New/.classpath
+++ b/The_Erder_Dedicated_New/.classpath
@@ -2,13 +2,16 @@
 <classpath>
 	<classpathentry exported="true" kind="lib" path="D:/workspace/TheErderEnums.jar"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="D:/workspace/jsonbeans-0.5.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/kryo.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/kryo-2.23.1-SNAPSHOT-all-debug.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/minlog.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/TextMMOEnums.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/mysql-connector-java-5.1.30-bin.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/gdx.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/jsonbeans-0.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/kryo.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/kryo-2.23.1-SNAPSHOT-all-debug.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/minlog.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/TextMMOEnums.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/mysql-connector-java-5.1.30-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/gdx/gdx.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/gdx/gdx-box2d/gdx-box2d.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/gdx/gdx-box2d/gdx-box2d-gwt.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/workspace/gdx/gdx-box2d/gdx-box2d-natives.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
